--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -6,10 +6,10 @@
 March 15, 2011 - [http://soafaces.googlecode.com/files/release_notes-2.5.6.html Release Notes]
 
 || *Download Package* || *Description* ||
-|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.6.zip soafaces-jars-2.5.6.zip] || SOAFaces binary JARs ||
-|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.6.zip soafaces-src-2.5.6.zip] || SOAFaces source ||
-|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.6.zip soafaces-javadocs-2.5.6.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.6.zip beansoup-sfb-2.5.6.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.6.zip soafaces-jars-2.5.6.zip] || soafaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.6.zip soafaces-src-2.5.6.zip] || soafaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.6.zip soafaces-javadocs-2.5.6.zip] || soafaces soafaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.6.zip beansoup-sfb-2.5.6.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your soafaces Container ||
 || [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.5.6.zip beansoup-sfb-src-2.5.6.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.5.6.zip universalapp-example-war-2.5.6.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
@@ -17,10 +17,10 @@ March 15, 2011 - [http://soafaces.googlecode.com/files/release_notes-2.5.6.html 
 January 11, 2011 - [http://soafaces.googlecode.com/files/release_notes-2.5.4.html Release Notes]
 
 || *Download Package* || *Description* ||
-|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.4.zip soafaces-jars-2.5.4.zip] || SOAFaces binary JARs ||
-|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.4.zip soafaces-src-2.5.4.zip] || SOAFaces source ||
-|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.4.zip soafaces-javadocs-2.5.4.zip] || SOAFaces Javadocs ||
-|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.4.zip beansoup-sfb-2.5.4.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your SOAFaces Container ||
+|| [http://soafaces.googlecode.com/files/soafaces-jars-2.5.4.zip soafaces-jars-2.5.4.zip] || soafaces binary JARs ||
+|| [http://soafaces.googlecode.com/files/soafaces-src-2.5.4.zip soafaces-src-2.5.4.zip] || soafaces source ||
+|| [http://soafaces.googlecode.com/files/soafaces-javadocs-2.5.4.zip soafaces-javadocs-2.5.4.zip] || soafaces Javadocs ||
+|| [http://soafaces.googlecode.com/files/beansoup-sfb-2.5.4.zip beansoup-sfb-2.5.4.zip] || Beansoup compiled sample Bundle components. Unzip and use Bundles in your soafaces Container ||
 || [http://soafaces.googlecode.com/files/beansoup-sfb-src-2.5.4.zip beansoup-sfb-src-2.5.4.zip] || Beansoup sample Bundle source code. Sample Bundle components ||
 || [http://soafaces.googlecode.com/files/universalapp-example-war-2.5.4.zip universalapp-example-war-2.5.4.zip] || Example using !UniversalClient API in a GWT web application to access remote services with no RPC! WAR file includes the sample source code for both GWT client and backend services. ||
 
