--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -3,7 +3,7 @@
 ==Example of creating a Tasklet based Bundle==
 This example shows how to build a very simple Bundle that implements a Tasklet and also includes an Weblet GUI interface for customizing the Tasklet's input !JavaBean.
 
-Follow these steps to learn how to develop, package and deploy your own SOAFaces Bundle (Bundle):
+Follow these steps to learn how to develop, package and deploy your own soafaces Bundle (Bundle):
 
   # Implement Tasklet Interface
   # Implement Weblet Interface (Optional)
@@ -11,7 +11,7 @@ Follow these steps to learn how to develop, package and deploy your own SOAFaces
   # Define an Output !JavaBean for Tasklet (Optional)
   # Create MANIFEST.MF File
   # Package Contents into a Bundle JAR file
-  # Deploy the new Bundle to a SOAFaces Container (like !JobServer)
+  # Deploy the new Bundle to a soafaces Container (like !JobServer)
 
 ===Step 1: Implement Tasklet Interface===
 
@@ -204,7 +204,7 @@ public class HelloWorldOutput implements IsSerializable
 
 ===Step 5: Create MANIFEST.MF File===
 
-The MANIFEST.MF file contains the meta information that informs a SOAFaces container like !JobServer what is contained in the Bundle JAR file and what interfaces are defined by the Bundle. The file is placed in the META-INF directory within the Bundle JAR.
+The MANIFEST.MF file contains the meta information that informs a soafaces container like !JobServer what is contained in the Bundle JAR file and what interfaces are defined by the Bundle. The file is placed in the META-INF directory within the Bundle JAR.
 
 {{{
 SOAFaces-Name: Hello World 3
@@ -283,8 +283,8 @@ Here is an example of a simple ANT target that can construct the Bundle archive 
 
 Notice that the client GWT code requires the source also be included in the JAR file. The GWT compiler requires the source and will use this to compile, on the fly, the Weblet into GWT AJAX code. The *`lib`* directory can contain any needed third party JARs used by the Weblet or Tasklet code.
 
-Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the SOAFaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simply include the compiled GWT client code in the *`www`* directory in the Bundle jar.
+Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the soafaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simply include the compiled GWT client code in the *`www`* directory in the Bundle jar.
 
-===Step 7: Deploy the new Bundle to a SOAFaces Container (like !JobServer)===
+===Step 7: Deploy the new Bundle to a soafaces Container (like !JobServer)===
 
-Name the Bundle JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer SOAFaces Repository tool and you should see the new Bundle. It can now be used to build a new job! 
+Name the Bundle JAR something like myhelloworld.sfb and place it in the !JobServer soafaces directory. The name must be unique within !JobServer. Now go to the !JobServer soafaces Repository tool and you should see the new Bundle. It can now be used to build a new job! 
