--- a/wiki/HadoopTasklet.wiki
+++ b/wiki/HadoopTasklet.wiki
@@ -18,7 +18,7 @@ This SFB has a Tasklet that executes and tracks the Hadoop job on the server sid
 == Weblet ==
 This component comes with a Weblet customizer to let you customize how to connect and setup your Hadoop job.
 
-== RuntimeViewer ==
+== !RuntimeViewer ==
 This component includes a RuntimeViewer for tracking and monitoring the Hadoop job as it runs and to report on its final status.
 
 = Hadoop Reporter =
