--- a/wiki/NewsEvents.wiki
+++ b/wiki/NewsEvents.wiki
@@ -1,6 +1,8 @@
 #summary New releases and happenings
 
 ==Status and News===
+  * *07/03/2012 - Release 2.6.4*
+    * _Minor UI and logic changes to Shell Script and EMail Tasklets_
   * *11/30/2011 - Release 2.6.0*
     * _Number of API changes including deprecating BaseIOView and some related classes_
     * _New !RuntimeViewer that unifies interface for runtime GUI for a Tasklet_
