--- a/wiki/NewsEvents.wiki
+++ b/wiki/NewsEvents.wiki
@@ -3,6 +3,8 @@
 ==Status and News===
   * *07/03/2012 - Release 2.6.4*
     * _Minor UI and logic changes to Shell Script and EMail Tasklets_
+    * _Source code javadoc fix for deprecated API references_
+    * _Code compiled with Java 6 (previously Java 5)_
   * *11/30/2011 - Release 2.6.0*
     * _Number of API changes including deprecating BaseIOView and some related classes_
     * _New !RuntimeViewer that unifies interface for runtime GUI for a Tasklet_
