--- a/wiki/NewsEvents.wiki
+++ b/wiki/NewsEvents.wiki
@@ -1,6 +1,8 @@
 #summary New releases and happenings
 
 ==Status and News===
+  * *07/03/2012 - Release 2.6.6*
+    * _API changes to support returning job run id WorkflowContainer.runJob(..) interface_
   * *07/03/2012 - Release 2.6.4*
     * _Minor UI and logic changes to Shell Script and EMail Tasklets_
     * _Source code javadoc fix for deprecated API references_
