--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -282,7 +282,27 @@ Here is an example of a simple ANT target that can construct the Bundle archive 
 
 Notice that the client GWT code requires the source also be included in the JAR file. The GWT compiler requires the source and will use this to compile, on the fly, the Weblet into GWT AJAX code. The *`lib`* directory can contain any needed third party JARs used by the Weblet or Tasklet code.
 
-Note, that you have the option to include the GWT client code (java source code an compiled code) in the Bundle and let the soafaces container compile the GWT client code into javascript for you (frees developer from dealing with GWT compiler) or you can compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simply include the compiled GWT client code in the *`www`* directory in the Bundle jar.
+Note, that you have the option to include the GWT client code (java source code) in the Bundle and let the soafaces container compile the GWT client code into javascript for you. This frees the developer from having to compile the GWT code and including it in the SFB. You may also compile the GWT client code yourself (using the GWT compiler) and include the javascript in the Bundle directly. You simply include the compiled GWT client code in the *`www`* directory in the Bundle jar.
+
+Here is an example what your SFB directory structure looks like:
+
+{{{
+  |
+  -- META-INF
+  |    |
+  |    --MANIFEST.MF  (manifest file that defines the SFB)
+  |
+  |
+  -- classes  (directory that contains any Tasklet or Weblet classes that are not in jar format)
+  |
+  |
+  -- lib  (directory that contains any Tasklet or Weblet need jars)
+  |
+  |
+  -- www  (optional directory that contains compiled GWT Weblet code)
+}}} 
+
+You may notice the SFB directory structure is similar to the servlet *`WAR`* directory structure. 
 
 ===Step 7: Deploy the new Bundle to a soafaces Container (like !JobServer)===
 
