--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -319,4 +319,4 @@ The `www` directory is optional and is where you can put your compiled GWT Weble
 
 ===Step 7: Deploy the new Bundle to a soafaces Container (like !JobServer)===
 
-Name the Bundle JAR something like `myhelloworld.sfb` and place it in the !JobServer `soafaces` directory. The name must be unique within !JobServer. Now go to the !JobServer soafaces Repository tool and you should see the new Bundle. It can now be used to build a new job! 
+Now, name the Bundle JAR something like `myhelloworld.sfb`, for example, and place it in the !JobServer `soafaces` directory. The name must be unique within !JobServer. Now go to the !JobServer soafaces Repository tool and you should see the new Bundle. It can now be used to build a new job! 
