Edited wiki page HowToCreateTasklet through web user interface.

--- a/wiki/HowToCreateTasklet.wiki
+++ b/wiki/HowToCreateTasklet.wiki
@@ -279,7 +279,7 @@ Here is an example of a simple ANT target that can construct the Bundle archive 
          <!-- Construct the MANIFEST.MF file that defines the SFB -->
          <manifest>
            <attribute name="SOAFaces-Name"            value="Hello World 3"/>
-           <attribute name="SOAFaces-SymbolicName"    value="surda-beansoup-helloworld3"/>
+           <attribute name="SOAFaces-SymbolicName"    value="helloworld3"/>
            <attribute name="SOAFaces-Version"         value="1.0.0"/>
            <attribute name="SOAFaces-Description"     value="Simple Tasklet with an input JavaBean and Weblet customizer"/>
            <attribute name="SOAFaces-Vendor"          value="Grand Logic, Inc"/>
